--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /translations/en-US/*.ts
+  - source: /translations/en-US/*.js
     translation: /translations/%locale%/%original_file_name%
